<resources>
    <string name="app_name">Bank</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="username">Логин</string>
    <string name="firstName">Имя</string>
    <string name="sum">Сумма</string>
    <string name="from_account">Номер счета для перевода</string>
    <string name="lastName">Фамилия</string>
    <string name="middleName">Отчество</string>
    <string name="password">Пароль</string>
    <string name="back">Уже есть аккаунт</string>
    <string name="come">Войти</string>
    <string name="main">Главная</string>
    <string name="detail">Детали счета</string>
    <string name="pending">Загрузка...</string>
    <string name="open">Открыть счет / кредит</string>
    <string name="open_account">Открыть счет</string>
    <string name="open_credit">Открыть кредит</string>
    <string name="close">Закрыть счет</string>
    <string name="withdraw">Снять</string>
    <string name="top_up">Пополнить</string>
    <string name="transfer">Перевести</string>
    <string name="run">Выполнить операцию</string>
</resources>