<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarControls"
        style="@style/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:paddingStart="16dp"
        android:paddingEnd="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/detail"
        app:titleTextColor="@color/blue" />

    <Button
        android:id="@+id/buttonNext"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="18dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonWithdraw"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />

    <Button
        android:id="@+id/buttonTopUp"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="18dp"
        android:text="@string/withdraw"
        app:layout_constraintEnd_toStartOf="@+id/buttonWithdraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />

    <Button
        android:id="@+id/buttonWithdraw"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="18dp"
        android:text="@string/top_up"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintStart_toEndOf="@+id/buttonTopUp"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />

    <TextView
        android:id="@+id/textViewNameAccount"
        style="@style/Title.Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/pending"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarControls" />

    <TextView
        android:id="@+id/textViewCount"
        style="@style/Title.Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pending"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/textViewNameAccount"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameAccount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWithdraw"
        tools:listitem="@layout/item_account" />
</androidx.constraintlayout.widget.ConstraintLayout>
